--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,11 +2,34 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-<p>this is a change</p>
-<p>this is a change</p>
+<h1>Team 11</h1>
+<br />
+<h2>We are partying and love IS413</h2>
 
-<p>This is for you, Caden <3</p>
+
+<img id="ski" src="https://static01.nyt.com/images/2019/11/26/travel/26trending-apps01/26trending-apps01-videoSixteenByNineJumbo1600.jpg.jpg" style="width: 400px;"/>
+<br/>
+<br/>
+<br/>
+
+<div class="row">
+    <div class="column">
+        <h3>What is happening world!</h3>
+        <p>
+            I am excited for IS 413. The first thing that I want to get out of this class is an understanding of how to code in ASP.net.
+            Besides the obvious I also want to learn how to use Git and Github. I am also excited to be learning and using javascript skills.
+            I want to be able to be a better coder by the end of this class.
+        </p>
+    </div>
+    <div class="column">
+        <h4>These are my top 3 jobs I am interested in pursuing:</h4>
+        <div style="text-align: left">
+            <ul>
+                <li>Cybersecurity Consultant</li>
+                <li>Product Manager</li>
+                <li>Software Developer</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
