--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,9 +12,15 @@
 <br/>
 <br/>
 
+
+<div>
+    <a></a>
+</div>
+
+
 <div class="row">
     <div class="column">
-        <h3>What is happening world!</h3>
+        <h3>What in the world is going on!</h3>
         <p>
             I am excited for IS 413. The first thing that I want to get out of this class is an understanding of how to code in ASP.net.
             Besides the obvious I also want to learn how to use Git and Github. I am also excited to be learning and using javascript skills.
