--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
     <nav>
         <a asp-controller="Blah" asp-action="Index">Home</a>
-        <a asp-controller="Blah" asp-action="Task">Enter Task Information</a>
+        <a asp-controller="Blah" asp-action="task">Enter Task Information</a>
     </nav>
 
 
