--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,39 +3,15 @@
 }
 
 <h1>Team 11</h1>
-<br />
+<br/>
+
+<img src="https://scontent-lax3-2.xx.fbcdn.net/v/t39.30808-6/s1080x2048/273683479_624986555392806_4697683599321732213_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=730e14&_nc_ohc=qwmTzMCM23QAX99Yw-c&tn=OzuEaF0nzxttAOQ9&_nc_ht=scontent-lax3-2.xx&oh=00_AT-JQZtdI_1PFRsNDL76wcJAyGzBGpBUQG9OVuVTpIr8xw&oe=6208CD8A" width="300" />
 <h2>We are partying and love IS413</h2>
 
 
-<img id="ski" src="https://static01.nyt.com/images/2019/11/26/travel/26trending-apps01/26trending-apps01-videoSixteenByNineJumbo1600.jpg.jpg" style="width: 400px;"/>
-<br/>
-<br/>
-<br/>
 
 
-<div>
-    <a></a>
-</div>
 
 
-<div class="row">
-    <div class="column">
-        <h3>What in the world is going on!</h3>
-        <p>
-            I am excited for IS 413. The first thing that I want to get out of this class is an understanding of how to code in ASP.net.
-            Besides the obvious I also want to learn how to use Git and Github. I am also excited to be learning and using javascript skills.
-            I want to be able to be a better coder by the end of this class.
-        </p>
-    </div>
-    <div class="column">
-        <h4>These are my top 3 jobs I am interested in pursuing:</h4>
-        <div style="text-align: left">
-            <ul>
-                <li>Cybersecurity Consultant</li>
-                <li>Product Manager</li>
-                <li>Software Developer</li>
-            </ul>
-        </div>
-    </div>
-</div>
+
 
