--- a/Views/Home/task.cshtml
+++ b/Views/Home/task.cshtml
@@ -1,7 +1,39 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Add a Task";
 }
 
-<p>Whats up baby</p>
+<form style="text-align: center" method="post">
+    <fieldset>
+        <legend>Task: </legend>
+
+
+        <label for="assignments">Task: </label>
+        <input id="assignments" type="text" /><br /><br />
+
+
+        <label for="groupProjects">Due Date: </label>
+        <input id="groupProjects" type="date"/><br /><br />
+
+
+        <label for="quizzes">Quadrant: </label><!--This field is required, need to double check with the models to see if that is required-->
+        <input id="quizzes" type="text"/><br /><br />
+
+        <label for="Category">Choose a category:</label>
+
+        <select name="category" id="category">
+            <option value="Home">Home</option>
+            <option value="School">School</option>
+            <option value="Work">Work</option>
+            <option value="Church">Church</option>
+        </select>
+
+        <br /><br />
+
+
+        <label for="completed">Completed (True/False): </label>
+        <input id="completed" type="number"/><br /><br />
+
+        <input id="btnSend" type="submit" value="Add Task"/>
+    </fieldset>
+    <div ></div>
+</form>
