--- a/Views/Home/taskList.cshtml
+++ b/Views/Home/taskList.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Task List";
+        ViewData["Title"] = "Task List";
 }
+
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
+
 
 
 <h1>Welcome to the task list page</h1>
@@ -22,20 +24,20 @@
     </thead>
 
     <tbody>
-        <!--foreach (var x in Model)-->
-    {
-    <tr>
-        <td>x.Task</td>
-        <td>x.DueDate</td>
-        <td>x.Quadrant</td>
-        <td>x.Category</td>
-        <td>x.Completed</td>
+        <!-- @foreach (var x in Model) -->
+ 
+        <tr>
+            <td>x.Task</td>
+            <td>x.DueDate</td>
+            <td>x.Quadrant</td>
+            <td>x.Category</td>
+            <td>x.Completed</td>
 
 
-        <!--<td><a asp-controller="Home" asp-action="Edit" asp-route-applicationid="x.ApplicationID">Edit</a></td>
-        <td><a asp-controller="Home" asp-action="Delete" asp-route-applicationid="x.ApplicationID">Delete</a></td>-->
+            <!--<td><a asp-controller="Home" asp-action="Edit" asp-route-applicationid="x.ApplicationID">Edit</a></td>
+            <td><a asp-controller="Home" asp-action="Delete" asp-route-applicationid="x.ApplicationID">Delete</a></td>-->
         </tr>
-        }
+            }
     </tbody>
 </table>
 
