--- a/Views/Home/taskList.cshtml
+++ b/Views/Home/taskList.cshtml
@@ -2,6 +2,8 @@
         ViewData["Title"] = "Task List";
 }
 
+@model List<ApplicationResponse>
+
 <link rel="stylesheet" type="text/css" href="/css/default.css" />
 
 
@@ -24,20 +26,22 @@
     </thead>
 
     <tbody>
-        <!-- @foreach (var x in Model) -->
- 
-        <tr>
-            <td>x.Task</td>
-            <td>x.DueDate</td>
-            <td>x.Quadrant</td>
-            <td>x.Category</td>
-            <td>x.Completed</td>
+        @foreach (var x in Model)
+        { 
+
+            <tr>
+                <td>x.Task</td>
+                <td>x.DueDate</td>
+                <td>x.Quadrant</td>
+                <td>x.Category</td>
+                <td>x.Completed</td>
 
 
-            <!--<td><a asp-controller="Home" asp-action="Edit" asp-route-applicationid="x.ApplicationID">Edit</a></td>
+            <td><a asp-controller="Home" asp-action="Edit" asp-route-applicationid="x.ApplicationID">Edit</a></td>
             <td><a asp-controller="Home" asp-action="Delete" asp-route-applicationid="x.ApplicationID">Delete</a></td>-->
-        </tr>
-            }
+            </tr>
+         }
+
     </tbody>
 </table>
 
