--- a/Views/Home/taskList.cshtml
+++ b/Views/Home/taskList.cshtml
@@ -30,15 +30,15 @@
         { 
 
             <tr>
-                <td>x.Task</td>
-                <td>x.DueDate</td>
-                <td>x.Quadrant</td>
-                <td>x.Category</td>
-                <td>x.Completed</td>
+                <td>@x.Task</td>
+                <td>@x.DueDate</td>
+                <td>@x.Quadrant</td>
+                <td>@x.Category</td>
+                <td>@x.Completed</td>
 
 
-            <td><a asp-controller="Home" asp-action="Edit" asp-route-applicationid="x.ApplicationID">Edit</a></td>
-            <td><a asp-controller="Home" asp-action="Delete" asp-route-applicationid="x.ApplicationID">Delete</a></td>-->
+            <td><a asp-controller="Home" asp-action="Edit" asp-route-applicationid="@x.TaskId">Edit</a></td>
+            <td><a asp-controller="Home" asp-action="Delete" asp-route-applicationid="@x.TaskId">Delete</a></td>-->
             </tr>
          }
 
