--- a/Views/Home/taskList.cshtml
+++ b/Views/Home/taskList.cshtml
@@ -37,8 +37,8 @@
                 <td>@x.Completed</td>
 
 
-            <td><a asp-controller="Home" asp-action="Edit" asp-route-applicationid="@x.TaskId">Edit</a></td>
-            <td><a asp-controller="Home" asp-action="Delete" asp-route-applicationid="@x.TaskId">Delete</a></td>-->
+            <td><a asp-controller="Home" asp-action="Edit" asp-route-TaskId="@x.TaskId">Edit</a></td>
+            <td><a asp-controller="Home" asp-action="Delete" asp-route-TaskId="@x.TaskId">Delete</a></td>-->
             </tr>
          }
 
