--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -36,7 +36,7 @@
 
 
         <label asp-for="Completed">Completed (True/False): </label>
-        <input asp-for="Completed" type="number" />@Model.Completed<br /><br />
+        <input asp-for="Completed" type="text" />@Model.Completed<br /><br />
 
         <input id="btnSend" type="submit" value="Add Task" />
     </fieldset>
