--- a/Views/Home/task.cshtml
+++ b/Views/Home/task.cshtml
@@ -35,7 +35,7 @@
 
 
         <label asp-for="Completed">Completed (True/False): </label>
-        <input asp-for="Completed" type="number"/><br /><br />
+        <input asp-for="Completed" type="text"/><br /><br />
 
         <input id="btnSend" type="submit" value="Add Task"/>
     </fieldset>
