--- a/Views/Home/taskList.cshtml
+++ b/Views/Home/taskList.cshtml
@@ -38,7 +38,7 @@
 
 
             <td><a asp-controller="Home" asp-action="Edit" asp-route-TaskId="@x.TaskId">Edit</a></td>
-            <td><a asp-controller="Home" asp-action="Delete" asp-route-TaskId="@x.TaskId">Delete</a></td>-->
+            <td><a asp-controller="Home" asp-action="Delete" asp-route-TaskId="@x.TaskId">Delete</a></td>
             </tr>
          }
 
