fixed category displaying wrong

--- a/Views/Home/taskList.cshtml
+++ b/Views/Home/taskList.cshtml
@@ -33,7 +33,7 @@
                 <td>@x.Task</td>
                 <td>@x.DueDate</td>
                 <td>@x.Quadrant</td>
-                <td>@x.Category</td>
+                <td>@x.Category.CategoryTitle</td>
                 <td>@x.Completed</td>
 
 
