--- a/Views/Home/taskList.cshtml
+++ b/Views/Home/taskList.cshtml
@@ -52,7 +52,7 @@
 <br /><br /><br /><br />
 
 
-<h1>Here is the cool layout</h1>
+<h1>Quadrants!</h1>
 
 <div class="container">
     <div class="grid-1 callout primary" style="border-style: solid">
